<package>
  <name>plt_gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for plt_base</p>
    <p>This package contains configuration data, 3D models and launch files
for plt_base robot</p>
  </description>
  <author>me</author>
  <maintainer email="729456897@qq.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
    <gazebo_ros gazebo_model_path="~/.gazebo/models/"/>
    <gazebo_ros gazebo_model_path="model/"/>
  </export>
</package>
